--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.2.0
   json_serializable: ^6.5.3
   json_annotation: ^4.7.0
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
