Add weather by search and current position

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   dio: ^4.0.6
   get_it: ^7.2.0
   json_serializable: ^6.5.3
   json_annotation: ^4.7.0
   flutter_bloc: ^8.1.1
+  geolocator: ^7.0.0-nullsafety.5
+  geocoding: ^2.0.5
+  flutter_native_timezone: ^1.0.10
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
   build_runner: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
