--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   geocoding: ^2.0.5
   flutter_native_timezone: ^1.0.10
   intl: ^0.17.0
+  fl_chart: ^0.55.2
 
 dev_dependencies:
   flutter_test:
